[metadata]
name = django-binhash
version = 0.2.0
description = Work with hexadecimal, store in binary, using half of the data size.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ronaldo Racum
author_email = ronaldo@racum.com
url = https://github.com/racum/django-binhash
license = BSD-3-Clause
keywords = binhash
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
install_requires = django
zip_safe = False
python_requires = >=3.10

[options.packages.find]
exclude = tests*
